fixe mobile overflow on homepage

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -359,6 +359,7 @@
 	padding: 8rem 0;
 	text-align: center;
 	background: #f4f4f4;
+	overflow: hidden;
 	.lg-reveal--layer:after,
 	.lg-reveal--layer-to-top:after,
 	.lg-reveal--layer-to-right:after,
